# clanker

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  REQUIREMENTS.md  clanker.spec  pyproject.toml  setup.png:Zone.Identifier
.claude/: settings.local.json
.github/workflows/: auto-tag.yml  deploy-docs.yml  release.yml  test.yml
docs/: CONFIG_WEB_APP.md  agents.md  configuration.md  copilot.md  development.md  installation.md  logging.md  mcp.md  skills.md  tools.md  troubleshooting.md  usage.md  workflows.md
docs-site/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs-site/public/: 404.html  robots.txt
docs-site/scripts/: generate-sitemap.mjs
docs-site/src/: App.vue  docs.ts  site.ts  vite-env.d.ts
docs-site/src/components/: CommandPalette.vue  DocArticle.vue  DocSidebar.vue  HeroTerminal.vue
docs-site/src/composables/: useMarkdown.ts  useSeo.ts
docs-site/src/styles/: main.css  markdown.css
hooks/: hook-copilot.py
scripts/: build.sh  install.ps1  install.sh  test.sh  uninstall.sh
src/clanker/: __init__.py  __main__.py  agents.py  cli.py  logging.py  runtime.py  skills.py  update.py  workflows.py
src/clanker/agent/: __init__.py  graph.py  middleware.py  prompts.py  state.py  summarization.py
src/clanker/agent/mnq/: agent.py  board.py  orchestrator.py  roles.py  tools.py
src/clanker/auth/: __init__.py  github_copilot.py
src/clanker/config/: __init__.py  blacklist.py  copilot_auth.py  models.py  settings.py  setup_wizard.py
src/clanker/config/web/: __init__.py  app.py  routes.py
src/clanker/config/web/static/: index.html
src/clanker/config/web/static/assets/: index-B8VPhhLr.css  index-BBeu33ao.css  index-BH5-lRZr.js  index-BMHgpxvC.css  index-BSz_AnJX.js  index-BT4lyCSd.js  index-B_0XunkF.js  index-B_w5zGl2.css  index-BeZyX2Is.css  index-Bl5CWbBo.js  index-BmOpnnAl.css  index-BqBnyBfH.css  index-CBGGoR-9.css  index-CBoZpmlf.js  index-CDh2Gr6r.js  index-CFS-8btl.js  index-CU200rtr.js  index-C_oYZRvh.css  index-CvG7nuO0.js  index-D-LrhySS.css  index-D9_1F0_P.css  index-DGnKkBga.css  index-DQh6nTZt.js  index-DV1ztqHw.js  index-DuJmrkUy.css  index-Dv-SVmn2.css  index-DwQxt8g0.js  index-FdJdIBCi.css  index-Fz1NUAFF.js  index-Hlug1eKx.js  index-VVMKXGat.js  index-WP5mPdzl.css  index-ZgrKAZ5m.js  index-_WSMi8fL.css  index-b8dgVBAj.js  index-kN72VUyE.js  index-pLnQ2zJK.js  index-v2MLG3n3.css  index-wXtpvarV.css  index-z4rXdX81.css
src/clanker/context/: __init__.py  compaction.py  errors.py  repair.py
src/clanker/copilot/: __init__.py  auth.py  client.py  errors.py  registry.py  session.py  tools.py
src/clanker/mcp/: __init__.py  loader.py
src/clanker/memory/: __init__.py  checkpointer.py  conversation.py  memories.py  workspace.py
src/clanker/providers/: __init__.py  github_copilot.py
src/clanker/tools/: __init__.py  agent_tools.py  ask_tools.py  background.py  bash_tools.py  file_tools.py  memory_tools.py  notify_tools.py  search_tools.py  skill_tools.py  subagent.py  web_tools.py
src/clanker/ui/: __init__.py  app.py  chat_log.py  completion_menu.py  console.py  markup_adapter.py  mid_turn_input.py  prompts.py  status_bar.py  streaming.py  styles.tcss  token_tracking.py  tool_display.py  tool_status.py
src/clanker/utils/: __init__.py  sandbox.py  validators.py
tests/: __init__.py  test_413_unwedge.py  test_agent.py  test_agent_name.py  test_agents.py  test_approval.py  test_ask_tools.py  test_background.py  test_blacklist.py  test_cli_dispatch.py  test_compact_command.py  test_config.py  test_console_tool_results.py  test_context_repair.py  test_copilot_auth.py  test_copilot_errors.py  test_execute_shell_promotion.py  test_markdown_ui.py  test_mnq.py  test_model_stream_timeout.py  test_notify_title.py  test_prompt_markers.py  test_prompts.py  test_runtime.py  test_sandbox.py  test_session_restore.py  test_skills.py  test_streaming_interrupt.py  test_subagent.py  test_summarization.py  test_token_tracking.py  test_tool_call_arg_truncation.py  test_tool_display.py  test_tool_filtering.py  test_tool_settings.py  test_tool_truncation.py  test_tools.py  test_web_tools.py  test_workflows.py
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.vue
web-ui/src/components/: ConfigPanel.vue
