[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clanker"
version = "0.1.0"
description = "An agentic coding CLI powered by LangChain"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["cli", "ai", "coding", "langchain", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    # Web server
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.32.0,<1.0",
    # LangChain ecosystem - pin to compatible versions
    "langchain>=0.3.0,<0.4",
    "langgraph>=0.2.0,<0.3",
    "langgraph-checkpoint-sqlite>=2.0.0,<3.0",
    "langchain-openai>=0.2.0,<0.3",
    "langchain-anthropic>=0.3.0,<0.4",
    "langchain-mcp-adapters>=0.1.0,<0.2",
    "langchain-github-copilot>=0.4.0,<0.5",
    # ML/embeddings
    "faiss-cpu>=1.9.0,<2.0",
    "sentence-transformers>=3.0.0,<4.0",
    # CLI
    "click>=8.1.0,<9.0",
    "rich>=13.9.0,<14.0",
    "prompt-toolkit>=3.0.0,<4.0",
    # Config
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "pyyaml>=6.0.0,<7.0",
    # HTTP client for auth
    "requests>=2.32.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
clanker = "clanker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clanker"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
