[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clanker"
version = "0.2.10"
description = "An agentic coding CLI powered by LangChain"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Vishal Kumar", email = "vishal.s.kumar99@gmail.com" }
]
keywords = ["cli", "ai", "coding", "langchain", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain>=0.3.0",
    "langchain-core>=1.0.0",
    "langgraph>=0.2.0",
    "langgraph-prebuilt>=1.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "github-copilot-sdk>=0.2.0,<0.2.1",
    "certifi>=2024.0.0",
    "pypdf>=4.0.0",
    "pymupdf>=1.24.0",  # For PDF visual analysis (no external deps)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
clanker = "clanker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clanker"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
